[gd_scene load_steps=4 format=3 uid="uid://bmtl50s4f3xx6"]

[ext_resource type="Script" path="res://src/editor/editor_stoplight/editor_property_panel_content_stoplight.gd" id="1_xnxg7"]
[ext_resource type="Script" path="res://src/common/common_ui/numeric_box.gd" id="2_gxjhw"]
[ext_resource type="PackedScene" uid="uid://rxqbforscflu" path="res://src/editor/editor_ui/vector_2_panel.tscn" id="2_y6l7q"]

[node name="EditorPropertyPanelContentStoplight" type="GridContainer"]
script = ExtResource("1_xnxg7")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Stoplight(s)"

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Pos"

[node name="PosPanel" parent="." instance=ExtResource("2_y6l7q")]
layout_mode = 2

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Offset"

[node name="OffsetBox" type="LineEdit" parent="."]
layout_mode = 2
select_all_on_focus = true
script = ExtResource("2_gxjhw")
suffix = " s"
min_value = 0.0

[connection signal="value_changed" from="OffsetBox" to="." method="_on_offset_box_value_changed"]
